deploy/dev-aks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prj028-dev-logistics
  namespace: __KubernetesNamespace__
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev-logistics.recordgo.cloud
      secretName: tls-secret-csi
  rules:
    - host: dev-logistics.recordgo.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prj028-dev-logistics
                port:
                  number: 8028
